test_regress/t/t_interface_top_bad.out
%Error: t/t_interface_top_bad.v:16: Unsupported: Interfaced port on top level module
   ifc.counter_mp c_data
                  ^~~~~~
%Error: t/t_interface_top_bad.v:16: Parent cell's interface is not found: 'ifc'
   ifc.counter_mp c_data
   ^~~
%Error: Exiting due to
